# libfvad

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac  libfvad.pc.in
debian/: changelog  control  copyright  rules
examples/: Makefile.am  fvadwav.c
include/: fvad.h
src/: Makefile.am  common.h  fvad.c
src/signal_processing/: division_operations.c  resample_48khz.c  resample_by_2_internal.c  resample_by_2_internal.h  resample_fractional.c  signal_processing_library.h  spl_inl.h
src/vad/: vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_gmm.c  vad_gmm.h  vad_sp.c  vad_sp.h
tests/: Makefile.am  signal_processing_unittest.c  test_common.c  test_common.h  vad_core_unittest.c  vad_filterbank_unittest.c  vad_gmm_unittest.c  vad_sp_unittest.c  vad_unittest.c  vad_unittest.h  wavtest.sh
tests/data/: wavtest.expect
tools/: import-commit  import-paths  import.sh
